{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 63,
  "lineage": "9526ee0d-94e0-20d1-a184-1b40ca7f10dc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a578785443db942",
            "arn": "arn:aws:ec2:us-east-1:936091381033:elastic-ip/eipalloc-01a578785443db942",
            "association_id": "eipassoc-064c3761debf9c87f",
            "domain": "vpc",
            "id": "eipalloc-01a578785443db942",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d9c7d58ca3819913",
            "private_dns": "ip-10-0-1-154.ec2.internal",
            "private_ip": "10.0.1.154",
            "public_dns": "ec2-3-221-129-159.compute-1.amazonaws.com",
            "public_ip": "3.221.129.159",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "ImageProcessor"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c28394c390fce5ac",
            "arn": "arn:aws:ec2:us-east-1:936091381033:elastic-ip/eipalloc-0c28394c390fce5ac",
            "association_id": "eipassoc-0e7f744161075228b",
            "domain": "vpc",
            "id": "eipalloc-0c28394c390fce5ac",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e24cce865c9c69a3",
            "private_dns": "ip-10-0-2-126.ec2.internal",
            "private_ip": "10.0.2.126",
            "public_dns": "ec2-54-243-194-171.compute-1.amazonaws.com",
            "public_ip": "54.243.194.171",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "ImageProcessor"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936091381033:internet-gateway/igw-0efd08f0ef09e17ee",
            "id": "igw-0efd08f0ef09e17ee",
            "owner_id": "936091381033",
            "tags": {
              "Name": "igw-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "igw-dev",
              "Project": "ImageProcessor"
            },
            "vpc_id": "vpc-044d700f951c96272"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a578785443db942",
            "association_id": "eipassoc-064c3761debf9c87f",
            "connectivity_type": "public",
            "id": "nat-07a2da43c163f6cd5",
            "network_interface_id": "eni-0d9c7d58ca3819913",
            "private_ip": "10.0.1.154",
            "public_ip": "3.221.129.159",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0576ce0d0c82cfeab",
            "tags": {
              "Name": "nat-a-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nat-a-dev",
              "Project": "ImageProcessor"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.igw",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c28394c390fce5ac",
            "association_id": "eipassoc-0e7f744161075228b",
            "connectivity_type": "public",
            "id": "nat-022325f695fe6ce42",
            "network_interface_id": "eni-0e24cce865c9c69a3",
            "private_ip": "10.0.2.126",
            "public_ip": "54.243.194.171",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c5f312dc1bb028cb",
            "tags": {
              "Name": "nat-b-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nat-b-dev",
              "Project": "ImageProcessor"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_b",
            "aws_internet_gateway.igw",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936091381033:route-table/rtb-00ebfe43f5b46f8d5",
            "id": "rtb-00ebfe43f5b46f8d5",
            "owner_id": "936091381033",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07a2da43c163f6cd5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private-a-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "rt-private-a-dev",
              "Project": "ImageProcessor"
            },
            "timeouts": null,
            "vpc_id": "vpc-044d700f951c96272"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936091381033:route-table/rtb-0c66ff0294475c99d",
            "id": "rtb-0c66ff0294475c99d",
            "owner_id": "936091381033",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-022325f695fe6ce42",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private-b-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "rt-private-b-dev",
              "Project": "ImageProcessor"
            },
            "timeouts": null,
            "vpc_id": "vpc-044d700f951c96272"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_b",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_b",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936091381033:route-table/rtb-000c8854863ba64c9",
            "id": "rtb-000c8854863ba64c9",
            "owner_id": "936091381033",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0efd08f0ef09e17ee",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "rt-public-dev",
              "Project": "ImageProcessor"
            },
            "timeouts": null,
            "vpc_id": "vpc-044d700f951c96272"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df296d3100c3ccc4",
            "route_table_id": "rtb-00ebfe43f5b46f8d5",
            "subnet_id": "subnet-0825e6c8cd2a101fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_a",
            "aws_route_table.private_a",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa074d33326317d1",
            "route_table_id": "rtb-0c66ff0294475c99d",
            "subnet_id": "subnet-06abca820d05c4188"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_b",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_b",
            "aws_route_table.private_b",
            "aws_subnet.private_b",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7145ed10a4e87e3",
            "route_table_id": "rtb-000c8854863ba64c9",
            "subnet_id": "subnet-0576ce0d0c82cfeab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08af3dfd57347e6fb",
            "route_table_id": "rtb-000c8854863ba64c9",
            "subnet_id": "subnet-0c5f312dc1bb028cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_crop_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936091381033:security-group/sg-0ac95f0185835b54c",
            "description": "Security Group para la Lambda que recorta imagenes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0ac95f0185835b54c",
            "ingress": [],
            "name": "crop-lambda-sg-dev",
            "name_prefix": "",
            "owner_id": "936091381033",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "vpce-sqs-sg-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "ImageProcessor",
              "name": "vpce-sqs-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-044d700f951c96272"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_upload_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936091381033:security-group/sg-066a95469074ca556",
            "description": "Security Group para la Lambda que sube imagenes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-066a95469074ca556",
            "ingress": [],
            "name": "upload-lambda-sg-dev",
            "name_prefix": "",
            "owner_id": "936091381033",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "upload-lambda-sg-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "upload-lambda-sg-dev",
              "Project": "ImageProcessor"
            },
            "timeouts": null,
            "vpc_id": "vpc-044d700f951c96272"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_vpce_sqs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936091381033:security-group/sg-067ad498ff0d34cce",
            "description": "Security Group para el VPC Endpoint de SQS",
            "egress": [],
            "id": "sg-067ad498ff0d34cce",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-066a95469074ca556",
                  "sg-0ac95f0185835b54c"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpce-sqs-sg-dev",
            "name_prefix": "",
            "owner_id": "936091381033",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpce-sqs-sg-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vpce-sqs-sg-dev",
              "Project": "ImageProcessor"
            },
            "timeouts": null,
            "vpc_id": "vpc-044d700f951c96272"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_crop_lambda",
            "aws_security_group.sg_upload_lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936091381033:subnet/subnet-0825e6c8cd2a101fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0825e6c8cd2a101fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "936091381033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-subnet-a-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "priv-subnet-a-dev",
              "Project": "ImageProcessor"
            },
            "vpc_id": "vpc-044d700f951c96272"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936091381033:subnet/subnet-06abca820d05c4188",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06abca820d05c4188",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "936091381033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-subnet-b-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "priv-subnet-b-dev",
              "Project": "ImageProcessor"
            },
            "vpc_id": "vpc-044d700f951c96272"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936091381033:subnet/subnet-0576ce0d0c82cfeab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0576ce0d0c82cfeab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "936091381033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-a-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pub-subnet-a-dev",
              "Project": "ImageProcessor"
            },
            "vpc_id": "vpc-044d700f951c96272"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936091381033:subnet/subnet-0c5f312dc1bb028cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5f312dc1bb028cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "936091381033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-b-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pub-subnet-b-dev",
              "Project": "ImageProcessor"
            },
            "vpc_id": "vpc-044d700f951c96272"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936091381033:vpc/vpc-044d700f951c96272",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cb1e10987d0c2061",
            "default_route_table_id": "rtb-042fdba7fd312cfbb",
            "default_security_group_id": "sg-0a44871f1dffeac32",
            "dhcp_options_id": "dopt-0751dc355838f103b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-044d700f951c96272",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-042fdba7fd312cfbb",
            "owner_id": "936091381033",
            "tags": {
              "Name": "vpc-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vpc-dev",
              "Project": "ImageProcessor"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936091381033:vpc-endpoint/vpce-03afcaedea8702a7e",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03afcaedea8702a7e",
            "ip_address_type": "ipv4",
            "owner_id": "936091381033",
            "policy": "{\"Statement\":[{\"Action\":[\"s3:GetObject\",\"s3:PutObject\"],\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":[\"arn:aws:s3:::image-processor-dev-images-ae-torresruiz\",\"arn:aws:s3:::image-processor-dev-images-ae-torresruiz/*\"]}],\"Version\":\"2012-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-00ebfe43f5b46f8d5",
              "rtb-0c66ff0294475c99d"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "vpce-s3-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vpce-s3-dev",
              "Project": "ImageProcessor"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-044d700f951c96272"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_a",
            "aws_eip.nat_b",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_a",
            "aws_nat_gateway.nat_b",
            "aws_route_table.private_a",
            "aws_route_table.private_b",
            "aws_s3_bucket.images",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936091381033:vpc-endpoint/vpce-06e158c821245b7cc",
            "dns_entry": [
              {
                "dns_name": "vpce-06e158c821245b7cc-8vnqa9qf.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06e158c821245b7cc-8vnqa9qf-us-east-1a.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06e158c821245b7cc-8vnqa9qf-us-east-1b.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sqs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04156711UO9WJCOAIJBR"
              },
              {
                "dns_name": "sqs.us-east-1.api.aws",
                "hosted_zone_id": "Z04156662RCI1VTJW5F8G"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06e158c821245b7cc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-039adacfe2d7c5064",
              "eni-0b2bf960ec709d944"
            ],
            "owner_id": "936091381033",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-067ad498ff0d34cce"
            ],
            "service_name": "com.amazonaws.us-east-1.sqs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.143",
                "subnet_id": "subnet-0825e6c8cd2a101fe"
              },
              {
                "ipv4": "10.0.12.143",
                "subnet_id": "subnet-06abca820d05c4188"
              }
            ],
            "subnet_ids": [
              "subnet-06abca820d05c4188",
              "subnet-0825e6c8cd2a101fe"
            ],
            "tags": {
              "Name": "vpce-sqs-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vpce-sqs-dev",
              "Project": "ImageProcessor"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-044d700f951c96272"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_crop_lambda",
            "aws_security_group.sg_upload_lambda",
            "aws_security_group.sg_vpce_sqs",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}